--- a/.classpath
+++ b/.classpath
@@ -2,5 +2,8 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="src" path=""/>
+	<classpathentry kind="lib" path="D:/eclipce/jar/jl1.0.1.jar"/>
+	<classpathentry kind="lib" path="D:/eclipce/jar/lombok.jar"/>
+	<classpathentry kind="lib" path="D:/eclipce/jar/mysql-connector-java-8.0.19.jar"/>
 	<classpathentry kind="output" path=""/>
 </classpath>
